button issue where text was wrapping fixed, navbar textwrap fixed

--- a/css/style3.css
+++ b/css/style3.css
@@ -2,6 +2,7 @@ body {
     box-sizing: border-box;
     max-width: 90%;
     margin: auto;
+    font-size: 1.2em;
 }
 
 hr {
@@ -9,16 +10,17 @@ hr {
 }
 
 .btn {
+    display: inline-block;
     text-decoration: none;
     text-align: center;
+    font-size: 1em;
     color: black;
     box-shadow: 3px 3px 3px #424242;
     background-color: lightgray;
     padding: .3em;
-    margin: 1em;
-    width: 10%;
+    margin: 1em 0;
+    border-radius: 5%;
 }
-
 
 
 /* Navbar */
@@ -36,6 +38,7 @@ header a {
     color: black;
     display: flex;
     justify-content: center;
+    white-space: nowrap;
 }
 
 header ul {
@@ -265,3 +268,6 @@ header li {
     }
 }
 
+@media screen and (max-width: 768px) and (min-width: 481px) {
+    
+}
